Added the missed file related to @wsdlLocation annotation for last commit
git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@436181 13f79535-47bb-0310-9956-ffa450edef68